k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fast-note
  labels:
    app: fast-note
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: fast-note
